--- a/AMONIC/ManagerMainWindow.xaml
+++ b/AMONIC/ManagerMainWindow.xaml
@@ -15,70 +15,60 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="15,0,0,0">
-            <Button Height="20" Click="clickAddUsers" Content="Add user" Width="100"/>
-            <Button Height="20" Content="Exit" Click="clickExit" Width="100" Margin="15,0,0,0"/>
-        </StackPanel>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="15,0,0,0"/>
         <StackPanel Grid.Row="1">
             <StackPanel Orientation="Horizontal"  Margin="15,0,0,0" Height="28" HorizontalAlignment="Right">
             <TextBlock Text="From" VerticalAlignment="Center"/>
-            <ComboBox SelectionChanged="selectionChangedComboBoxFrom" x:Name="ComboBoxAirportFrom" Width="100" Margin="15,0,0,0" DisplayMemberPath="Title" SelectedValuePath="ID"/>
+                <ComboBox SelectionChanged="selectionChangedComboBoxAiraports" x:Name="ComboBoxAirportFrom" Width="100" Margin="15,0,0,0" DisplayMemberPath="Name" SelectedValuePath="ID"/>
 
                 <TextBlock Text="To" VerticalAlignment="Center"  Margin="15,0,0,0"/>
-                <ComboBox SelectionChanged="selectionChangedComboBoxTo" x:Name="ComboBoxAirportTo" Width="100" Margin="15,0,0,0" DisplayMemberPath="Title" SelectedValuePath="ID"/>
-
-                <TextBlock Text="Sort by" VerticalAlignment="Center"  Margin="15,0,0,0"/>
-                <ComboBox SelectionChanged="selectionChangedComboBoxSortBy" x:Name="ComboBoxSortBy" Width="100" Margin="15,0,15,0" DisplayMemberPath="Title" SelectedValuePath="ID"/>
+                <ComboBox SelectionChanged="selectionChangedComboBoxAiraports"  x:Name="ComboBoxAirportTo" Width="100" Margin="15,0,15,0" DisplayMemberPath="Name" SelectedValuePath="ID"/>
             </StackPanel>
             
             <StackPanel Orientation="Horizontal"  Margin="15,10,0,0" Height="28" HorizontalAlignment="Right">
                 <TextBlock Text="Outbound" VerticalAlignment="Center"/>
-                <TextBox x:Name="TextBoxOutBound" Width="100" Margin="15,0,0,0"/>
+                
+                <DatePicker x:Name="DatePickerOutbound" Width="100" Margin="15,0,0,0"/>
 
                 <TextBlock Text="Flight Nuber" Margin="15,0,0,0" VerticalAlignment="Center"/>
                 <TextBox x:Name="TextBoxFlightNyber" Width="100" Margin="15,0,0,0"/>
 
-                <Button Content="Apply"  Margin="15,0,15,0" Width="100"/>
-
+                <Button Content="Reset filter" Click="clickReset"  Margin="15,0,15,0" Width="100"/>
+                <Button Content="Apply" Click="clickApply"  Margin="15,0,15,0" Width="100"/>
             </StackPanel>
 
         </StackPanel>
 
-        <DataGrid x:Name="DataGridUsersList" AutoGenerateColumns="False" Grid.Row="2" Margin="15">
+        <DataGrid x:Name="DataGridShuldesList" AutoGenerateColumns="False" Grid.Row="2" Margin="15">
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}">
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding RoleID}" Value="1">
-                            <Setter Property="Foreground" Value="Orange"/>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding Active}" Value="False">
-                            <Setter Property="Foreground" Value="Red" />
+                        <DataTrigger Binding="{Binding Confirmed}" Value="false">
+                            <Setter Property="Foreground" Value="Red"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </DataGrid.CellStyle>
 
             <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Логин" Binding="{Binding Email}"/>
-                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Имя" Binding="{Binding LastName}"/>
-                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Фамилия" Binding="{Binding FirstName}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Date" Binding="{Binding Date, StringFormat={}{0:dd/MM/yyyy}}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Time" Binding="{Binding Time}"/>
 
-                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Офис" Binding="{Binding Offices.Title}"/>
-                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Роль" Binding="{Binding Roles.Title}"/>
-                <!--
-                <DataGridTemplateColumn Width="100" Header="Редактирование">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Content="Edit" Uid="{Binding UserId}" Width="100" Click="EditUser"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn> -->
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="From" Binding="{Binding Routes.Airports.IATACode}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="To" Binding="{Binding Routes.Airports1.IATACode}"/>
+
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Flight number" Binding="{Binding Aircrafts.MakeModel}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="Aircrafts" Binding="{Binding Aircrafts.Name}"/>
+
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="EconomyPrice" Binding="{Binding EconomyPrice}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="BuisnesPrice" Binding="{Binding BuisnesPrice}"/>
+                <DataGridTextColumn IsReadOnly="True" Width="*" Header="FirstClass" Binding="{Binding FirstClass}"/>
 
             </DataGrid.Columns>
         </DataGrid>
 
         <StackPanel Grid.Row="3" Orientation="Horizontal">
-            <Button Click="clickCanselFlight" Content="Change Role" HorizontalAlignment="Center" Margin="15,0,0,0" VerticalAlignment="Center" Height="30" Width="200"/>
+            <Button Click="clickCancelFlight" Content="Cancel Flight" HorizontalAlignment="Center" Margin="15,0,0,0" VerticalAlignment="Center" Height="30" Width="200"/>
             <Button Click="clickEdit" Content="Edit flightn" Margin="15,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="200"/>
 
             <Button Click="clickImport" Content="Import change" Margin="15,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="200"/>
