--- a/AMONIC/Operator.xaml
+++ b/AMONIC/Operator.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="AMONIC.ManagerMainWindow"
+﻿<Window x:Class="AMONIC.Operator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AMONIC"
         mc:Ignorable="d"
-        Title="Manage Flight Schuldules" Height="450" Width="800" MinHeight="450" MinWidth="800"
+        mc:Ignorable="d"
+        Title="Search for flights" Height="600" Width="800" MinHeight="600" MinWidth="800"
         Icon="/Image/logo_color_blue.png">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -13,37 +14,46 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
         <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="15,0,0,0"/>
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
+        <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Margin="0,5,0,0">
             <StackPanel Orientation="Horizontal"  Margin="15,0,0,0" Height="28" HorizontalAlignment="Right">
                 <TextBlock Text="From" VerticalAlignment="Center"/>
                 <ComboBox SelectionChanged="selectionChangedComboBoxAiraports" x:Name="ComboBoxAirportFrom" Width="100" Margin="15,0,0,0" DisplayMemberPath="Name" SelectedValuePath="ID"/>
 
                 <TextBlock Text="To" VerticalAlignment="Center"  Margin="15,0,0,0"/>
                 <ComboBox SelectionChanged="selectionChangedComboBoxAiraports"  x:Name="ComboBoxAirportTo" Width="100" Margin="15,0,15,0" DisplayMemberPath="Name" SelectedValuePath="ID"/>
+
+                <TextBlock Text="Cabin Type" VerticalAlignment="Center"  Margin="15,0,0,0"/>
+                <ComboBox SelectionChanged="selectionChangedCabinType"  x:Name="ComboBoxCabinType" Width="100" Margin="15,0,15,0" DisplayMemberPath="Name" SelectedValuePath="ID"/>
+
             </StackPanel>
 
             <StackPanel Orientation="Horizontal"  Margin="15,10,0,0" Height="28" HorizontalAlignment="Right">
-                <TextBlock Text="Outbound" VerticalAlignment="Center"/>
 
+                <RadioButton x:Name="radioButtonReturn" Content="Return" VerticalAlignment="Center" />
+                <RadioButton x:Name="radioButtonOneWay" Content="OneWay" VerticalAlignment="Center" Margin="15,0,0,0"/>
+
+                <TextBlock Text="Outbound" VerticalAlignment="Center" Margin="15,0,0,0"/>
                 <DatePicker x:Name="DatePickerOutbound" Width="100" Margin="15,0,0,0"/>
 
-                <TextBlock Text="Flight Nuber" Margin="15,0,0,0" VerticalAlignment="Center"/>
-                <TextBox x:Name="TextBoxFlightNyber" Width="100" Margin="15,0,0,0"/>
+                <TextBlock Text="Return" VerticalAlignment="Center" Margin="15,0,0,0"/>
+                <DatePicker x:Name="DatePickerReturn" Width="100" Margin="15,0,0,0"/>
 
-                <Button Content="Reset filter" Click="clickReset"  Margin="15,0,15,0" Width="100"/>
+
+
+
                 <Button Content="Apply" Click="clickApply"  Margin="15,0,15,0" Width="100"/>
             </StackPanel>
 
         </StackPanel>
 
-        <DataGrid x:Name="DataGridShuldesList" AutoGenerateColumns="False" Grid.Row="2" Margin="15" Grid.ColumnSpan="2">
+        <DataGrid x:Name="DataGridShuldesList" AutoGenerateColumns="False" Grid.Row="1" Margin="15" Grid.ColumnSpan="2">
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}">
                     <Style.Triggers>
